package com.protocols;

/**
 * @author Dominic
 * @since 03-Sep-16
 * Website: www.dominicheal.com
 * Github: www.github.com/DomHeal
 */
public enum Status {
    ONLINE, AWAY, BUSY
}
