@startuml

title __PROTOCOLS's Class Diagram__\n

  namespace com.protocols {
    class com.protocols.PMessage {
        - color : String
        - file : byte[]
        - message : String
        - sender : String
        + PMessage()
        + PMessage()
        + getColor()
        + getFile()
        + getMessage()
        + getSender()
        + getType()
        + setColor()
        + setFile()
        + setMessage()
        + setSender()
        + setType()
        + toJSON()
    }
  }
  

  namespace com.protocols {
    enum PMessageType {
      COLOR
      FILE
      USER
    }
  }
  

  namespace com.protocols {
    class com.protocols.Peer {
        - name : String
        - sourceHost : String
        - sourcePort : int
        + getName()
        + getSourceHost()
        + getSourcePort()
        + setName()
        + setSourceHost()
        + setSourcePort()
    }
  }
  

  namespace com.protocols {
    class com.protocols.SMessage {
        - channel : String
        - count : int
        - list : ArrayList<User>
        - msg : String
        - name : String
        - picture : String
        - pictureMsg : byte[]
        - users : ArrayList<User>
        - voiceMsg : byte[]
        + SMessage()
        + getChannel()
        + getMsg()
        + getName()
        + getOnlineCount()
        + getPeer()
        + getPicture()
        + getPictureMsg()
        + getStatus()
        + getType()
        + getUserlist()
        + getUsers()
        + getVoiceMsg()
        + setChannel()
        + setMsg()
        + setName()
        + setOnlineCount()
        + setPeer()
        + setPicture()
        + setPictureMsg()
        + setStatus()
        + setType()
        + setUserlist()
        + setUsers()
        + setVoiceMsg()
    }
  }
  

  namespace com.protocols {
    enum SMessageType {
      CHANNEL
      CLOSEP2P
      CONNECTED
      DISCONNECTED
      NOTIFICATION
      OPENP2P
      PICTURE
      SERVER
      STATUS
      USER
      VOICE
    }
  }
  

  namespace com.protocols {
    enum Status {
      AWAY
      BUSY
      ONLINE
    }
  }
  

  namespace com.protocols {
    class com.protocols.User {
        - name : String
        - picture : String
        + User()
        + User()
        + getName()
        + getPicture()
        + getStatus()
        + setName()
        + setPicture()
        + setStatus()
    }
  }
  

  com.protocols.PMessage .up.|> java.io.Serializable
  com.protocols.PMessage o-- com.protocols.PMessageType : type
  com.protocols.Peer .up.|> java.io.Serializable
  com.protocols.SMessage .up.|> java.io.Serializable
  com.protocols.SMessage o-- com.protocols.Peer : peer
  com.protocols.SMessage o-- com.protocols.Status : status
  com.protocols.SMessage o-- com.protocols.SMessageType : type
  com.protocols.User .up.|> java.io.Serializable
  com.protocols.User o-- com.protocols.Status : status


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
